# fixture_rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
fixture/: Cargo.toml
fixture/src/: lib.rs
fixture_derive/: Cargo.toml  README.md
fixture_derive/src/: lib.rs
fixture_rs/: Cargo.toml  README.md
tests/: Cargo.toml
tests/src/: lib.rs
