[package]
name = "fixture_derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
