[package]
name = "fixture_rs"
authors.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
fixture_derive = { path = "../fixture_derive", version = "0.0.1" }
